--- a/document-structure/cart/task.css
+++ b/document-structure/cart/task.css
@@ -89,3 +89,14 @@ body {
 .product-shadow {
   position: absolute;
 }
+
+.remove__product {
+  position: absolute;
+  color: red;
+  top: -3%;
+  right: 0;
+  font-size: 25px;
+  text-decoration: none;
+  cursor: pointer;
+  margin: 0 20px 0 0;
+}
